Fixed Help and title divs, and the background

--- a/index.html
+++ b/index.html
@@ -10,23 +10,37 @@
     <!-- Bootstrap stuff-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Custom CSS for black background -->
+    <style>
+        body {
+            background-color: #3B3B3B;
+            color: white; /* Optional: Change text color to white for better visibility */
+        }
+
+    </style>
 </head>
 
 <body>
 
     <header>
-        <div class = "header">
-            <h1>BRAIN ROTTINATOR</h1>
+        <div class="headerBox">
+            <div></div>
+            <div></div>
+            <div  class="header">
+                <h1>BRAIN ROTTINATOR</h1>
+            </div>
+            
+            <div></div>
+            <button type="button" class="button" id="Help">HELP</button>
         </div>
-        
-        <button type ="button" class="button" id = "Help">HELP</button>
     </header>
 
     <main>
-    <div>
-        <button class="button" id = "Upload">UPLOAD A FILE</button>
-        <button class="button">UPLOAD A LINK</button>
-    </div>
+        <div class = "buttonContainer">
+            <button class="button" id="Upload">UPLOAD A FILE</button>
+            <button class="button">UPLOAD A LINK</button>
+        </div>
     </main>
 
     <script src="main.js"></script>
