--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
     </header>
 
     <main>
-        <div class = "buttonContainer">
-            <button class="button" id="Upload">UPLOAD A FILE</button>
-            <button class="button">UPLOAD A LINK</button>
+        <div class = flexContainer>
+            <div class = "buttonContainer">
+                <button class="button" id="Upload">UPLOAD A FILE</button>
+                <button class="button" id = "Link">UPLOAD A LINK</button>
+            </div>
         </div>
     </main>
 
