--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
     <main>
     <div>
-        <button class="button" id = "Upload">UPLOAD A FILE</button>
-        <button class="button">UPLOAD A LINK</button>
+        <button class="button" id="Upload">UPLOAD A FILE</button>
+        <input type="file" id="fileInput" style="display: none;">
+        <button class="button" id = "LINK">UPLOAD A LINK</button>
     </div>
     </main>
 
