--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
     </header>
 
     <main>
+        <div class = "image-container">
+
+            <img src ="Group 11.png" alt="Clean Brain"> 
+            <img src ="Variant2.png" alt = "Brain Rot">
+
+            <button type = "button" class = "arrowButton">
+                <img src = "Group 10.png " alt = "Arrow">
+            </button>
+        </div>
+
         <div class = flexContainer>
             <div class = "buttonContainer">
                 <button class="button" id="Upload">UPLOAD A FILE</button>
