--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img src ="Group 11.png" alt="Clean Brain"> 
             <img src ="Variant2.png" alt = "Brain Rot">
 
-            <button type = "button" class = "arrowButton">
+            <button type = "button" id = "arrowButton" onclick= "changeImage()">
                 <img src = "Group 10.png " alt = "Arrow">
             </button>
         </div>
