made the arrow button flippable

--- a/index.html
+++ b/index.html
@@ -38,26 +38,20 @@
 
     <main>
 
-    <div>
-        <button class="button" id="Upload">UPLOAD A FILE</button>
-        <input type="file" id="fileInput" style="display: none;">
-        <button class="button" id = "LINK">UPLOAD A LINK</button>
-    </div>
-
         <div class = "image-container">
 
-            <img src ="Group 11.png" alt="Clean Brain"> 
-            <img src ="Variant2.png" alt = "Brain Rot">
+            <img src ="Group 11.png" alt="Brain Rot">
 
-            <button type = "button" id = "arrowButton" onclick= "changeImage()">
-                <img src = "Group 10.png " alt = "Arrow">
-            </button>
+            <input id="arrowButton" type="image" src="Variant2.png" alt="arrow button" onclick="changeImage()">
+            
+            <img src = "Group 10.png " alt = "Clean Brain">
         </div>
 
         <div class = flexContainer>
             <div class = "buttonContainer">
                 <button class="button" id="Upload">UPLOAD A FILE</button>
-                <button class="button" id = "Link">UPLOAD A LINK</button>
+                <input type="file" id="fileInput" style="display: none;">
+                <button class="button" id = "LINK">UPLOAD A LINK</button>
             </div>
         </div>
 
