--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <img src ="Group 11.png" alt="Brain Rot">
 
-            <input id="arrowButton" type="image" src="Variant2.png" alt="arrow button" onclick="changeImage()">
+            <input id="arrowButton" type="image" src="Variant2.png" alt="arrow button" onclick="changeArrowImage()">
             
             <img src = "Group 10.png " alt = "Clean Brain">
         </div>
